<resources>
    <string name="app_name">Weather forecast</string>
    <string name="title_city">Ha Noi</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_menu">Menu</string>
    <string name="action_add_city">Add city</string>
    <string name="my_saved_location">My saved locations</string>
    <string name="settings">Settings</string>
    <string name="current_location">Current Location</string>
    <string name="units">Units</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_unit_celsius">Celsius</string>
    <string name="temperature_unit_fahrenheilt">Fahrenheit</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_unit_mph">mph</string>
    <string name="wind_speed_unit_ms">m/s</string>
    <string name="wind_speed_unit_kmh">km/h</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="cancel">CANCEL</string>
    <string name="copyright">2016 Framgia Vietnam. All rights reserved.</string>
    <string name="search_city">Search city</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="erroe_contacting_api">Error contacting API: </string>
    <string name="error_api_not_connected">Google API not connected</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="prompt_connection_done">Connection Done</string>
    <string name="prompt_connection_suspended">Connection Suspended</string>
    <string name="prompt_connection_failed">Connection Failed</string>
    <string name="forecast_io">Forecast.io</string>
    <string name="not_Found_Loction">not found Location in forecast.io </string>
    <string name="not_connect_network">Please! choose a connection network</string>
    <string name="data_request">no data returns please swipe the screen to the latest</string>
    <string name="update">Update:</string>
    <string name="google_api_key">AIzaSyDGj6VRKYu3tOFlLAt6yIe3u5Q2JsOIJKA</string>
    <string name="action_enable_current_location">Enable</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="current_location_not_found">Current location not found</string>
    <string name="require_location_permission">You need to allow location permission</string>
    <string name="city">city</string>
    <string name="permissions">Location permission denied</string>
    <string name="retry">Retry</string>
    <string name="Settings">Setting</string>
    <string name="no_allow_find">please allow</string>
    <string name="use_current_location">Use current loction</string>
    <string name="title_gps_setting">GPS is settings</string>
    <string name="gps_notification">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_setting">Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="allow">allow</string>
    <array name="temperature_unit">
        <item name="fahrenheilt">Fahrenheit</item>
        <item name="celsius">Celsius</item>
    </array>

    <array name="wind_speed_unit">
        <item name="mph">mph</item>
        <item name="ms">m/s</item>
        <item name="kmh">km/h</item>
    </array>

</resources>
