<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_setting_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/current_location"
            android:textColor="@android:color/black" />

        <Switch
            android:id="@+id/switch_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_setting_margin"
        android:layout_marginRight="@dimen/activity_setting_margin"
        android:layout_marginTop="@dimen/activity_setting_margin"
        android:text="@string/units"
        android:textColor="@color/text_units"
        android:textSize="@dimen/sub_title" />

    <LinearLayout
        android:id="@+id/linear_layout_temperature_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_setting_margin"
            android:layout_marginTop="@dimen/activity_setting_margin"
            android:text="@string/temperature"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_setting_margin"
            android:layout_marginLeft="@dimen/activity_setting_margin"
            android:text="@string/temperature_unit_celsius" />
    </LinearLayout>

    <include layout="@layout/layout_line_break" />

    <LinearLayout
        android:id="@+id/linear_layout_wind_speed_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_setting_margin"
            android:layout_marginTop="@dimen/activity_setting_margin"
            android:text="@string/wind_speed"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text_view_wind_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_setting_margin"
            android:layout_marginLeft="@dimen/activity_setting_margin"
            android:text="@string/wind_speed_unit_mph" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_setting_margin"
        android:layout_marginRight="@dimen/activity_setting_margin"
        android:layout_marginTop="@dimen/activity_setting_margin"
        android:text="@string/about"
        android:textColor="@color/text_units"
        android:textSize="@dimen/sub_title" />

    <LinearLayout
        android:id="@+id/linear_layout_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_setting_margin"
            android:layout_marginLeft="@dimen/activity_setting_margin"
            android:layout_marginTop="@dimen/activity_setting_margin"
            android:text="@string/license"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>